typescript/checker/tests/conformance/statements/for-ofStatements/ES5For-of34.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            97,
        ),
        hi: BytePos(
            100,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/statements/for-ofStatements/ES5For-of34.ts:6:6
  |
6 | for (foo().x of ['a', 'b', 'c']) {
  |      ^^^

